<project xmlns="http://maven.apache.org/POM/4.1.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 http://maven.apache.org/xsd/maven-4.1.0.xsd"
  root="true">

  <groupId>work.spell.iskibal</groupId>
  <artifactId>iskibal-parent</artifactId>
  <version>0.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Iskibal Rule Transpiler Parent POM</name>

  <properties>
    <maven.compiler.release>25</maven.compiler.release>
  </properties>

  <subprojects>
    <subproject>iskibal-rule-model</subproject>
    <subproject>iskibal-parser</subproject>
    <subproject>iskibal-asciidoc</subproject>
    <subproject>iskibal-compiler-common</subproject>
    <subproject>iskibal-compiler-java</subproject>
    <subproject>iskibal-integration-tests</subproject>
    <subproject>iskibal-maven-plugin</subproject>
    <subproject>iskibal-maven-plugin-tests</subproject>
  </subprojects>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>work.spell.iskibal</groupId>
        <artifactId>iskibal-rule-model</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>work.spell.iskibal</groupId>
        <artifactId>iskibal-parser</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>work.spell.iskibal</groupId>
        <artifactId>iskibal-compiler-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>work.spell.iskibal</groupId>
        <artifactId>iskibal-compiler-java</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jspecify</groupId>
        <artifactId>jspecify</artifactId>
        <version>1.0.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>4.0.0-beta-4</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.5</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.4.0</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.12.0</version>
          <configuration>
            <release>25</release>
            <doclint>all,-missing</doclint>
          </configuration>
        </plugin>

        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>2.44.4</version>
          <configuration>
            <java>
              <eclipse>
                <version>4.34</version>
                <file>config/eclipse_formatter.xml</file>
              </eclipse>
              <formatAnnotations/>
            </java>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>